docs(tutorials+troubleshooting): Complete Phase 2 - Schema authoring tutorials + troubleshooting
## Summary

Comprehensive documentation additions for FraiseQL schema authoring:

### PHASE 2A: Schema Authoring Tutorials (4 languages)
Created `/docs/tutorials/` directory with 4 complete blog API tutorials:

- **python-blog-api.md** (1,844 lines)
  * PostgreSQL schema with views and functions
  * Python @fraiseql decorators explained
  * Schema export and compilation workflow
  * Testing, deployment, troubleshooting

- **typescript-blog-api.md** (2,020 lines)
  * TypeScript decorator syntax
  * Project setup with tsconfig.json
  * Query and mutation patterns
  * Docker deployment

- **go-blog-api.md** (1,362 lines)
  * Go struct tags for schema definition
  * Builder pattern explained
  * Export tool implementation
  * Table-driven tests

- **java-blog-api.md** (1,361 lines)
  * @GraphQLType and @GraphQLField annotations
  * Maven/Gradle configuration
  * Builder pattern for queries/mutations
  * Spring Boot integration hints

Total: **6,587 lines** of tutorial documentation

### PHASE 1B: Troubleshooting Sections (16 SDKs)
Added `## Troubleshooting` section to each SDK reference:

**Updated files**: 16 SDK reference files
- Python, TypeScript, Go, Java, Kotlin, Scala, Clojure, Groovy
- Rust, C#, Swift, PHP, Ruby, Dart, Elixir, Node.js

**Each includes** (80-150 lines):
- Common setup issues (imports, versions, dependencies)
- Type system errors (mismatches, nullability, generics)
- Runtime errors (execution, connections, auth)
- Performance issues (query speed, memory, pooling)
- Debugging techniques (logging, debuggers, inspecting schemas)
- Getting help (GitHub, community, profiling)

Total: **~6,000 lines** of language-specific troubleshooting

### PHASE 1C: Framework Integration Index
Created `/docs/integrations/framework-guides/README.md`:

- **1,212 lines** comprehensive guide
- Quick reference for 13 web frameworks
- Integration patterns (GraphQL endpoints, RE